# ComfyScript

projects/xyz-plot-studio/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
projects/xyz-plot-studio/backend/: .env.example  Dockerfile  pyproject.toml
projects/xyz-plot-studio/backend/app/: __init__.py  main.py
projects/xyz-plot-studio/backend/app/api/: routes.py
projects/xyz-plot-studio/backend/app/core/: __init__.py  config.py
projects/xyz-plot-studio/backend/app/models/: __init__.py  database.py  schemas.py
projects/xyz-plot-studio/backend/app/services/: __init__.py  enum_service.py  experiment_service.py  wandb_service.py  workflow_generator.py
projects/xyz-plot-studio/backend/tests/: __init__.py  conftest.py  test_api.py  test_models.py  test_services.py
projects/xyz-plot-studio/docs/: ARCHITECTURE.md  USER_GUIDE.md
projects/xyz-plot-studio/frontend/: Dockerfile  index.html  nginx.conf  package.json
projects/xyz-plot-studio/frontend/src/: App.tsx  index.css
projects/xyz-plot-studio/frontend/src/components/: ExperimentBuilder.tsx  ParameterControl.tsx  ZAxisScrubber.tsx
projects/xyz-plot-studio/frontend/src/services/: api.ts
projects/xyz-plot-studio/frontend/src/types/: index.ts
