[project]
name = "xyz-plot-studio"
version = "0.1.0"
description = "Systematic hyperparameter exploration webapp for ComfyUI using ComfyScript"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="ComfyScript XYZ Team" },
]
keywords = ["comfyui", "comfyscript", "hyperparameter", "xyz-plot", "machine-learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Core web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",

    # WebSockets
    "websockets>=12.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",

    # Task queue (for async generation)
    "celery>=5.3.0",
    "redis>=5.0.0",

    # ComfyScript
    "comfy-script[runtime]>=0.5.0",

    # Wandb integration
    "wandb>=0.16.0",

    # Image processing
    "Pillow>=10.0.0",

    # Utilities
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",

    # CORS
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
